# dynamic_representations

./: .gitignore  CLAUDE.md  README.md  Tutorial_Gemma_Scope_from_Scratch.ipynb  debug_plot_activation_distribution.py  interactive_trajectory_viz.ipynb  pyproject.toml  temporal_feature_analysis_demo.ipynb
cache/: cache_activations.py  cache_garden_path.py  cache_llm_activations.py  cache_residuals.py  cache_surprisal.py  cache_surrogate.py  extract_surprising_sentences.py  surprisal.ipynb
configs/: cache.py  defaults.py  ustat.yaml
exp/: activation_cache.py  autocorrelation.py  basic_stats.py  cache_surrogate.py  collect_long_sentences.py  context_exp_var.py  convert_and_upload_to_hf.py  data_gen_syntactic_complexity.py  equal_steps_solver.py  garden_path_entropy.py  garden_path_magnitude.py  geometry_population.py  inspect_single_sentence.ipynb  intrinsic_dimensionality.py  llm_inference.py  max_activating_examples.py  mteb_exp.py  pca_basics.py  pca_density.py  pca_exp_var.py  pca_magnitude.py  pca_variance_explained.py  plot_umap_2d.ipynb  plot_umap_standalone.ipynb  pred_pca.py  pred_umap.py  sae_num_active.py  sae_variance_explained.py  similarity_heatmap.py  simplestories_viewer.ipynb  sliding_window_CE.py  sorted_act_magnitude.py  syntactic_complexity.py  temporal_sae_setup.ipynb  temporal_sae_setup_safetensors.txt  tokenizer_playground.py  u_stat.py  ustat.py
exp/dev/: activation_magnitude.py  autocorrelation_old.py  (+33 more)
plotting/: attn_graphs.py  autocorrelation.py  basic_stats.py  context_exp_var.py  garden_path_entropy.py  geometry_population.py  load_basic_stats.py  pca_exp_var.py  pred_novel_heatmaps.py  pred_pca.py  pred_umap.py  render_legend.py  sae_basic_stats.py  similarity_matrix.py  surprisal_similarity_matrix.py  u_stat.py  ustat.py
scripts/: download_artifacts_from_hf.sh  hf_artifacts_sync.py  run_cache.sh  upload_artifacts_to_hf.sh
src/: cache_utils.py  configs.py  dictionary.py  exp_utils.py  geometry_utils.py  model_utils.py  plotting_utils.py  preprocessing_utils.py  project_config.py
(+28 files in other folders)
