[project]
name = "dynamic_representations"
version = "0.1.0"
description = "Dynamic Representations"
readme = "README.md"
requires-python = ">=3.12.8"
license = { text = "MIT" }
dependencies = [
    # List your dependencies here
    "black",
    "transformers>=4.50.0",
    "torch>=2.7.0",
    "datasets>=3.6.0",
    "nnsight>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src"]