[project]
name = "dynamic_representations"
version = "0.1.0"
description = "Dynamic Representations"
readme = "README.md"
requires-python = ">=3.12.8"
license = { text = "MIT" }
dependencies = [
    "black",
    "transformers>=4.50.0",
    "torch>=2.7.0",
    "datasets>=3.6.0",
    "nnsight>=0.4.6",
    "matplotlib",
    "zstandard",
    "scikit-dimension",
    "spacy",
    "einops",
    "pytest>=8.4.2",
    "umap-learn>=0.5.9.post2",
    "plotly>=6.3.1",
    "nbformat>=5.10.4",
    "mteb[xet]>=1.39.7",
    "temporalsaes",
    "sentence-transformers>=3.0.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src"]

[tool.uv.sources]
temporalsaes = { path = "../TemporalSAEs", editable = true }
